# simplydmx

./: .gitignore  .gitmodules  Cargo.toml  Readme.md
bench/: .gitignore  Cargo.toml
bench/src/: main.rs  uuid.rs
enttecopendmx-rs/: README.md
enttecopendmx-rs/src/: lib.rs
sacn/: Cargo.toml  README.md
sacn/src/: error.rs  lib.rs  packet.rs  source.rs
simplydmx-bin/: Cargo.toml
simplydmx-plugin-framework/: Cargo.toml
simplydmx-plugin-framework/src/: keep_alive.rs
simplydmx-plugin-framework/src/event_emitter/: mod.rs
simplydmx-plugin-framework/src/services/: service.rs
simplydmx_backend/: Cargo.toml
simplydmx_backend/docs/: mixer.md  output_dmx.md  patcher.md  sub-types.md
simplydmx_backend/docs/events/: mixer.md
simplydmx_backend/src/: init.rs  lib.rs  main.rs  plugins.rs
simplydmx_backend/src/api_utilities/: events.rs  mod.rs
simplydmx_backend/src/mixer_utils/: data_sources.rs  default_blender.rs  layer.rs  mod.rs  state.rs  static_layer.rs
simplydmx_backend/src/plugins/: core.rs
simplydmx_backend/src/plugins/live_controller/: control_interfaces.rs  controller_services.rs  design_notes.md  mod.rs  scalable_value.rs  types.rs
simplydmx_backend/src/plugins/live_controller/control_proxies/: analog_to_digital.rs  debounce_analog.rs  digital_to_analog.rs  mod.rs
simplydmx_backend/src/plugins/live_controller/providers/: mod.rs
simplydmx_backend/src/plugins/live_controller/providers/boards/: mod.rs
simplydmx_backend/src/plugins/live_controller/providers/boards/behringer/: mod.rs
simplydmx_backend/src/plugins/live_controller/providers/boards/behringer/x_touch/: compact.rs
simplydmx_backend/src/plugins/midi_controllers/: controller_types.rs  mod.rs
simplydmx_backend/src/plugins/midi_controllers/controllers/behringer/: mod.rs  x_touch_compact.rs
simplydmx_backend/src/plugins/midi_router/: mod.rs
simplydmx_backend/src/plugins/midi_router/backends/: coremidi_backend.rs  mod.rs
simplydmx_backend/src/plugins/mixer/: blender.rs  commands.rs  controls.rs  mod.rs  state.rs
simplydmx_backend/src/plugins/output_dmx/: driver_types.rs  fixture_types.rs  interface.rs  mod.rs  services.rs  state.rs
simplydmx_backend/src/plugins/output_dmx_e131/: dmxsource_controller.rs  interface.rs  mod.rs  state.rs
simplydmx_backend/src/plugins/output_dmx_enttecopendmx/: controller.rs  interface.rs  mod.rs
simplydmx_backend/src/plugins/patcher/: fixture_types.rs  interface.rs  mod.rs  services.rs  state.rs
simplydmx_backend/src/plugins/patcher/driver_plugin_api/: mod.rs
simplydmx_backend/src/plugins/saver/: mod.rs  services.rs  types.rs
simplydmx_backend/src/utilities/: mod.rs  serialized_data.rs
simplydmx_backend/src/utilities/forms/: interactivity.rs  mod.rs  validation.rs
simplydmx_bin/: .gitignore  Cargo.toml  about.toml  build.rs  tauri.conf.json
simplydmx_bin/docs/: mixer.md  plugin_design.md
simplydmx_bin/docs/events/: mixer.md
simplydmx_bin/src/: core.rs  init.rs  lib.rs  main.rs  plugins.rs
simplydmx_bin/src/api_utilities/: events.rs  mod.rs
simplydmx_bin/src/mixer_utils/: default_blender.rs  state.rs  static_layer.rs
simplydmx_bin/src/plugins/: core.rs
simplydmx_bin/src/plugins/api/: events.rs  mod.rs
simplydmx_bin/src/plugins/gui/: mod.rs
simplydmx_bin/src/plugins/mixer/: blender.rs  commands.rs  mod.rs  state.rs  types.rs
simplydmx_bin/src/plugins/output_dmx/: driver_types.rs  fixture_types.rs  interface.rs  mod.rs  services.rs  state.rs  types.rs
simplydmx_bin/src/plugins/output_dmx_e131/: dmxsource_controller.rs  interface.rs  mod.rs  state.rs
simplydmx_bin/src/plugins/patcher/: fixture_types.rs  interface.rs  mod.rs  patcher_context.rs  services.rs  state.rs  types.rs
simplydmx_bin/src/plugins/patcher/driver_plugin_api/: mod.rs
simplydmx_bin/src/plugins/patcher/services/: get_base_layer.rs  import_fixture.rs  mod.rs
simplydmx_bin/src/plugins/saver/: mod.rs  types.rs
simplydmx_bin/src/plugins/stdio_api/: mod.rs
simplydmx_bin/src/type_extensions/: uuid.rs
simplydmx_bin/src/utilities/: forms.rs  mod.rs  serialized_data.rs
simplydmx_bin/src/utilities/forms/: interactivity.rs  mod.rs  validation.rs
simplydmx_desktop/: Cargo.toml  tauri.conf.json
simplydmx_desktop/src/: main.rs
simplydmx_frontend/: index.html  package.json
simplydmx_frontend/src/: router.ts
simplydmx_frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
simplydmx_frontend/src-tauri/src/: desktop.rs  lib.rs  main.rs  mobile.rs
simplydmx_frontend/src/assets/: theme.scss
simplydmx_frontend/src/components/generic/: ColorPicker.vue  Fader.vue  icon.vue  largeselect.vue  tabitem.vue  tabs.vue
simplydmx_frontend/src/components/visualizer/: connector.ts  helpers.ts  types.ts  visualizer.vue
simplydmx_frontend/src/components/visualizer/controls/: ColorPicker.vue  Debug.vue  Fader.vue  FixtureControl.vue
simplydmx_frontend/src/scripts/: conversions.ts
simplydmx_frontend/src/scripts/api/ipc/: agnostic_abstractions.ts  ipc_tauri.ts  rpc.ts
simplydmx_frontend/src/stores/: live.ts  patcher.ts  submaster.ts
simplydmx_frontend/src/views/: Home.vue
simplydmx_frontend/src/views/patcher/: CreateFixtureDialog.vue  FixturesTab.vue  UniversesTab.vue  patcher.vue
simplydmx_frontend/src/views/submasters/: CreateSubmasterDialog.vue  submasters.vue
simplydmx_mobile/: .gitignore  Cargo.toml  mobile.toml
simplydmx_mobile/src/: lib.rs
simplydmx_plugin_framework/: Cargo.toml
simplydmx_plugin_framework/docs/: builtin-events.md  keep-alive.md
simplydmx_plugin_framework/src/: arc_any.rs  keep_alive.rs  lib.rs  plugin.rs
simplydmx_plugin_framework/src/event_emitter/: arc_any.rs  arc_portable.rs  event_receiver.rs  mod.rs  portable_message.rs
simplydmx_plugin_framework/src/services/: internals.rs  mod.rs  type_specifiers.rs
simplydmx_plugin_framework/src/tests/: services.rs
simplydmx_plugin_macros/: Cargo.toml
simplydmx_plugin_macros/src/: interpolate_service_macro.rs  lib.rs  parsing_helpers.rs  plugin_interface_generator.rs  portable_object_macro.rs
(+1 files in other folders)
