[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.4.4"
readme = "README.md"
keywords = ["acn", "sacn", "dmx"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
documentation = "https://docs.rs/sacn/"
repository = "https://github.com/lschmierer/sacn"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { version = "1.2.2", features = [] }
socket2 = { version = "0.5.3", optional = true }
uuid = { version = "1.0.0", features = ["v4"] }

[features]
default = ["std"]
std = ["socket2"]

[badges]
travis-ci = { repository = "lschmierer/sacn" }
