[package]
name = "simplydmx-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde = "1.0.136"
serde_json = "1.0.74"
async-std = { version = "1.10.0", features = ["tokio1"] }
simplydmx_plugin_framework = { path = "../simplydmx_plugin_framework" }
sacn = { version = "0.4.4", optional = true }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
async-trait = "0.1.57"
bincode = "1.3.3"
futures = "0.3.23"
tauri =  { version = "1.0.0", optional = true, features = ["api-all", "devtools"] }
serde-big-array = "0.4.1"

[features]
default = [
	"stdout-logging",
	"output-dmx-e131",
	"blender",
	"blender-benchmark",
	"gui",
	"api",
	"tauri/custom-protocol",
]

verbose-debugging = [
	"simplydmx_plugin_framework/shutdown-debug",
]

stdout-logging = [] # Log service in core

output-dmx = []
output-dmx-e131 = [
	"output-dmx",
	"sacn"
]

blender = []
blender-benchmark = [
	"blender",
]

api = []

gui = [
	"tauri",
]
