[package]
name = "simplydmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde = "1.0.136"
serde_json = "1.0.74"
async-std = { version = "1.10.0", features = ["tokio1"] }
simplydmx_plugin_framework = { path = "../simplydmx_plugin_framework" }
sacn = { version = "0.4.4", optional = true }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
async-trait = "0.1.57"
ciborium = "0.2.0"
futures = "0.3.23"
tauri =  { version = "1.2.3", optional = true, features = ["api-all", "macos-private-api"] }
serde-big-array = "0.4.1"
tsify = { version = "0.4.2", default-features = false }
linkme = { version = "0.3.5", optional = true }
window-vibrancy = "0.3.2"
anyhow = "1.0.68"
thiserror = "1.0.38"

[lib]
# name = "simplydmx_embedded"
path = "src/lib.rs"

[[bin]]
name = "simplydmx"
path = "src/main.rs"

[features]
default = ["gui", "stdout-logging", "default-plugins", "custom-protocol"]

dev = ["gui", "stdout-logging", "default-plugins", "blender-benchmark", "devtools"]

devtools = ["tauri/devtools"]

custom-protocol = ["tauri/custom-protocol"]

# This is meant to be run stand-alone, similar to tests. It generates the rpc.ts file that the frontend runs on
export-services = ["linkme", "simplydmx_plugin_framework/tsify", "stdout-logging", "default-plugins"]

default-plugins = ["output-dmx-e131", "blender", "api"]

verbose-debugging = ["simplydmx_plugin_framework/shutdown-debug"]

stdout-logging = [] # Log service in core

output-dmx = []
output-dmx-e131 = ["output-dmx", "sacn"]

blender = []
blender-benchmark = ["blender"]

startup-benchmark = []

api = []

gui = ["tauri"]
