[package]
name = "simplydmx_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["tokio1"] }
futures = "0.3.23"
tauri =  { version = "1.2.3", features = ["api-all", "macos-private-api"] }
window-vibrancy = "0.3.2"
simplydmx = { path = "../simplydmx_backend", features = ["stdout-logging"] }
serde_json = "1.0.74"


[features]
default = ["custom-protocol"]

dev = ["simplydmx/blender-benchmark", "devtools"]

devtools = ["tauri/devtools"]

custom-protocol = ["tauri/custom-protocol"]
