[package]
name = "simplydmx_mobile"
version = "0.1.0"
authors = ["Shaun Keys <mariobuddy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.cargo-android]
app-activity-name = ".MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.4.0",
    "androidx.appcompat:appcompat:1.5.0",
    "com.google.android.material:material:1.6.1",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [ "android.permission.INTERNET" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_REVERSED_DOMAIN = "com.shaunkeys"
WRY_ANDROID_APP_NAME_SNAKE_CASE = "simplydmx"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/shaunkeys"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[dependencies]
anyhow = "1.0.56"
futures = "0.3.24"
log = "0.4.11"
serde_json = "1.0.85"
wry = { git = "https://github.com/tauri-apps/wry" }
simplydmx = { path = "../simplydmx_backend" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
jni = "0.19.0"
paste = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
core-foundation = "0.9.3"
mobile-entry-point = "0.1.0"
env_logger = "0.9.0"
