[package]
name = "simplydmx_plugin_framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.19"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.72"
ciborium = "0.2.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
simplydmx_plugin_macros = { path = "../simplydmx_plugin_macros" }
tsify = { version = "0.4.2", default-features = false, optional = true }

[features]

shutdown-debug = []
tsify = [
	"dep:tsify",
	"simplydmx_plugin_macros/tsify",
]
