[package]
name = "simplydmx_plugin_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
