[package]
name = "simplydmx_plugin_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.14"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }

[features]
tsify = []
tsify-wasm-abi = ["tsify"]
