[package]
name = "simplydmx"
version = "0.1.0"
description = "Stage lighting made simple, affordable, and powerful."
authors = ["Shaun keys"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.7", features = ["api-all", "macos-private-api"] }
simplydmx_lib = { path = "../../simplydmx_backend", features = ["stderr-logging"] }
tokio = { version = "1.28.1", features = ["full"] }

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = "0.1.9"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.3.2"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
